# Safety-Performance-Tradeoff-in-RL-Robots

./: .gitignore  README.md  environment.yml  pyproject.toml
results/aggregate/test/: reward_penalty_budget_matches.csv  shield_summary.csv
results/aggregate/train/: lagrangian_budget_summary.csv  reward_penalty_budget_matches.csv  shield_summary.csv
results/aggregated/train/: lagrangian_budget_summary.csv  shield_summary.csv
results/aggregated_reward_lag/test/: lagrangian_budget_summary.csv  reward_penalty_budget_matches.csv
results/aggregated_reward_lag/train/: reward_penalty_budget_matches.csv
results/lagrangian/easy/seed0_budget0/: evaluation_manifest.json  final_model.json  run_config.json  train_metrics.csv
results/lagrangian/easy/seed0_budget10/: evaluation_manifest.json  (+3 more)
scripts/: aggregate_budget_results.py  check_env.py  evaluate_baseline.py  plot_lagrangian_results.py  plot_medium_comparison.py  plot_reward_penalty_results.py  run_lagrangian_sweep.sh  run_reward_penalty_sweep.sh  run_shield_sweep.sh  train_baseline.py
src/spt_envs/: __init__.py  configs.py  factory.py  logging.py  registry.py  splits.py  wrappers.py
src/spt_training/: __init__.py  aggregate.py  common.py  evaluate.py  plot_lagrangian.py  plot_medium_comparison.py  plot_reward_penalty.py  train.py
tests/: test_api_adapter.py  test_cost_contract.py  test_env_creation.py  test_evaluation_and_aggregation.py  test_lagrangian.py  test_reproducibility.py  test_reward_penalty.py  test_shield.py  test_split_integrity.py  test_train_env_factory.py  test_training_runner.py
(+1612 files in other folders)
